# simple-pwgen

./: .gitignore  LICENSE  MANIFEST.in  POTFILES.in  README.md  generate_desktop_files  index.html  setup.cfg  setup.py  simple-pwgen.pot  snapcraft.yaml  test  update-pot
.github/workflows/: ci.yml  codeql-analysis.yml  publish-deb.yml  snapcraft.yaml  update-stable.yml
data/: org.mamolinux.simple-pwgen.gschema.xml.in  org.x.simple-pwgen.gschema.xml  simple-pwgen.desktop.in
data/applications/: simple-pwgen.desktop
data/ui/: simple-pwgen.ui
debian/: README.Debian  README.source  changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python3-simple-pwgen.install  rules  simple-pwgen.1  simple-pwgen.doc-base.ex  simple-pwgen.install  simple-pwgen.postinst  simple-pwgen.postrm
docs/: SimplePwgen.rst  common.rst  conf.py  index.rst  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  simple_pwgen.rst
po/: simple-pwgen-bn.po  simple-pwgen-en_GB.po
snap/: snapcraft.yaml
src/SimplePwgen/: __init__.py  common.py  gui.py  main.py  simple_pwgen.py
src/SimplePwgen/ui/: default-method.ui  diceware-method.ui  pin-generation.ui  shortcuts.ui  simple-pwgen.ui  style.css
styles/css-styles/: style.css
test/: test
usr/lib/simple-pwgen/: common.py  simple-pwgen.py
usr/share/applications/: simple-pwgen.desktop
usr/share/applications/kde4/: simple-pwgen.desktop
usr/share/simple-pwgen/: shortcuts.ui  simple-pwgen.ui
