[metadata]
name = simple-pwgen
version = file: src/SimplePwgen/VERSION
author = Himadri Sekhar Basu
author_email = hsb10@iitbbs.ac.in
description = Simple Password Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/hsbasu/simple-pwgen
project_urls =
    Bug Tracker = https://www.github.com/hsbasu/simple-pwgen/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved
     :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Accessories

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *VERSION

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    simple-pwgen-gui = SimplePwgen.main:start_SPGGui
console_scripts =
    simple-pwgen = SimplePwgen.main:start_SPGCli

[build_i18n]
domain=simple-pwgen
desktop_files=[("share/applications", ("data/simple-pwgen.desktop.in",
                                      ))]
schemas_files=[("share/glib-2.0/schemas", 
                 ("data/org.x.simple-pwgen.gschema.xml.in",))
              ]
